--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <input
           type="number"
           id="input1"
-          placeholder="FIRST INPUT"
+          placeholder="FIRST NUMBER"
           class="form-control form-control-lg"
         />
         <input
           type="number"
           id="input2"
-          placeholder="SECOND INPUT"
+          placeholder="SECOND NUMBER"
           class="form-control form-control-lg"
         />
       </div>
@@ -92,8 +92,19 @@
           </svg>
           Division
         </button>
-        <button id="divide" class="btn btn-lg btn-dark">
-          
+        <button id="clear" class="btn btn-lg btn-dark">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-wrench"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"
+            />
+          </svg>
           Clear
         </button>
       </div>
@@ -101,7 +112,7 @@
 
       <div class="result">
         <input
-          type="text"
+          type="number"
           id="output"
           class="form-control form-control-lg"
           placeholder="OUTPUT"
